# app/Http/Controllers/User/AddUserRoleProjectController.php
@@ -12,7 +12,7 @@ use OpenApi\Attributes as OAT;
 
 class AddUserRoleProjectController extends Controller
 {
-    #[OAT\Post(path: '/users/adduserroleprojects', tags: ['usersAddUserRoleProjects'])]
+    #[OAT\Post(path: '/users/adduserroleprojects', tags: ['users'])]
     #[JsonRequestBody(AddUserRoleProjectRequestData::class)]
     #[SuccessNoContentResponse]
     public function __invoke(AddUserRoleProjectRequestData $request)
@@ -21,10 +21,34 @@ class AddUserRoleProjectController extends Controller
 
         // Log::info($request->user_role_projects->toArray());
 
+        // Log::info(
+        //     $request
+        //         ->user_role_projects
+        //         ->groupBy('user_id')
+        //     // ->each(fn ($item) => Log::info($item));
+        // );
+
+        // $x = $request
+        //     ->user_role_projects
+        //     ->groupBy('user_id');
+
+        // // Log::info(
+        // $x
+        //     ->each(fn ($item, $key) => Log::info($key));
+        // // );
+
+        // Log::info(
+
+        //     $x
+        //         ->keys()
+        // );
+
+        // Log::info(message: $x[3]->first());
+
         // easy way, it works
         DB::table('project_role_user')
             ->insert(
-                $request
+                values: $request
                     ->user_role_projects
                     ->all()
             );
